Added keys page with AWS section
